# Q-Sentinel-Mesh

./: .git-commit-message.txt  .gitignore  README.md  amplify.yml  create_business_slides.js  create_pitch.js  package-lock.json  pyproject.toml  requirements.txt  run_all.py  setup_env.bat  test_smoke.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
config/: fed_config.json  node_manifest.sample.json
dashboard/: app.py  i18n.py
dashboard/assets/: styles.css
dashboard/components/: ct_viewer.py  fed_chart.py  heatmap_overlay.py
dashboard/utils/: pdf_export.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
infra/: deploy.sh  docker-compose.dev.yml  ec2-user-data.sh  upload-runtime-assets.ps1
infra/cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
results/: baseline_results.json  benchmark_results.json  combined_results.json  eval_results.json  fed_results.json  high_acc_results.json  hybrid_results.json  optimal_thresholds.json  patient049_result.json
scripts/: copy_demo_cases.py  eval_75patients.py  evaluate_model.py  fed_client.py  fed_server.py  find_demo_cases.py  finetune_ctich.py  gen_tls_certs.py  healthcheck.py  infer_ct.py  post_deploy_smoke.py  sync_runtime_assets.sh  train_baseline.py  train_combined.py  train_high_acc.py  train_hybrid.py
src/data/: combined_loader.py  mock_data.py  nifti_loader.py  rsna_loader.py
src/federated/: client.py  compat.py  data_utils.py  hybrid_client.py  pqc_crypto.py  (+2 more)
(+61 files in other folders)
