[project]
name = "q-sentinel-mesh"
version = "0.1.0"
requires-python = "==3.11.*"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
# Force headless opencv on all platforms (no GUI / display server needed)
override-dependencies = [
    "opencv-python-headless>=4.8.0",
    "opencv-python; sys_platform == 'never'",
]
